samples/_failures_safe/1761509370_2d4491_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99b30bb3.c: In function ‘main’:
./samples/SAFE/__tmp_99b30bb3.c:146:16: error: missing terminating " character
  146 |         printf("Decomp
      |                ^~~~~~~
./samples/SAFE/__tmp_99b30bb3.c:146:9: error: expected expression at end of input
  146 |         printf("Decomp
      |         ^~~~~~
./samples/SAFE/__tmp_99b30bb3.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99b30bb3.c:146:9: error: expected declaration or statement at end of input
